package ru.yandex.practicum;

import com.google.protobuf.Empty;
import io.grpc.stub.StreamObserver;
import lombok.extern.slf4j.Slf4j;
import net.devh.boot.grpc.server.service.GrpcService;
import ru.yandex.practicum.grpc.telemetry.hubrouter.HubRouterControllerGrpc;
import ru.yandex.practicum.grpc.telemetry.messages.DeviceActionRequest;

@Slf4j
@GrpcService
public class HubRouterControllerImpl extends HubRouterControllerGrpc.HubRouterControllerImplBase {

    @Override
    public void handleDeviceAction(DeviceActionRequest request,
                                   StreamObserver<Empty> responseObserver) {

        log.info("üöÄ handleDeviceAction –≤—ã–∑–≤–∞–Ω");
        log.info("‚û°Ô∏è –í—Ö–æ–¥—è—â–∏–µ –¥–∞–Ω–Ω—ã–µ: hubId={}, scenarioName={}",
                request.getHubId(), request.getScenarioName());
        log.info("‚û°Ô∏è Action: sensorId={}, type={}, value={}",
                request.getAction().getSensorId(),
                request.getAction().getType(),
                request.getAction().getValue());

        try {
            // –ó–¥–µ—Å—å –º–æ–∂–µ—Ç –±—ã—Ç—å —Ç–≤–æ—è –ª–æ–≥–∏–∫–∞ –æ–±—Ä–∞–±–æ—Ç–∫–∏ –∫–æ–º–∞–Ω–¥—ã
            log.info("‚öôÔ∏è –û–±—Ä–∞–±–∞—Ç—ã–≤–∞—é –∫–æ–º–∞–Ω–¥—É –¥–ª—è —Å–µ–Ω—Å–æ—Ä–∞ {}",
                    request.getAction().getSensorId());

            // –£—Å–ø–µ—à–Ω—ã–π –æ—Ç–≤–µ—Ç
            responseObserver.onNext(Empty.getDefaultInstance());
            responseObserver.onCompleted();
            log.info("‚úÖ –ö–æ–º–∞–Ω–¥–∞ —É—Å–ø–µ—à–Ω–æ –æ–±—Ä–∞–±–æ—Ç–∞–Ω–∞ –∏ –æ—Ç–ø—Ä–∞–≤–ª–µ–Ω –æ—Ç–≤–µ—Ç gRPC");
        } catch (Exception e) {
            log.error("‚ùå –û—à–∏–±–∫–∞ –ø—Ä–∏ –æ–±—Ä–∞–±–æ—Ç–∫–µ handleDeviceAction", e);
            responseObserver.onError(e);
        }
    }
}
